# mixturemodel

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  setup.py
.travis/: requirements.txt
benchmarks/: benchmarks_mnist.py  benchmarks_mnist_script.py
cmake/: print_cmake_command.py
conda/microscopes-mixturemodel/: meta.yaml
include/microscopes/mixture/: model.hpp
microscopes/cxx/mixture/: _fixed_state_h.pxd  _model.pxd  _model.pyx  _model_h.pxd  _state_h.pxd  model.pyx
microscopes/mixture/: __init__.py  _fixed_state_h.pxd  _model.pxd  _model.pyx  _model_h.pxd  _state_h.pxd  definition.pxd  definition.pyx  model.pyx  query.py  runner.py  testutil.py
microscopes/models/mixture/: dd.py  dp.py
microscopes/py/mixture/: dd.py  dp.py  model.py
src/mixture/: model.cpp
test/: test_crp.py  test_cxx_imports.py  test_definition.py  test_dm.py  test_hp_inference.py  test_mixturemodel_gibbs_assign.py  test_models_get_set_params.py  test_models_mixture_dd.py  test_models_mixture_dp.py  test_models_sample_fill.py  test_niw.py  test_query.py  test_runner.py  test_sample.py  test_slice_theta.py  test_state.py  test_state_stress.py
test/cxx/: prog.cpp  test_state.cpp
